# aegis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aegis_mcp_server.py  demo.py  pyproject.toml
.github/workflows/: test.yml
aegis/: __init__.py  core.py  models.py  policy.py
aegis/integrations/: __init__.py  crewai.py  langchain.py
aegis/modules/: __init__.py  authorization.py  intent.py  price.py  seller.py  terms.py
docs/: workflow.html
tests/: conftest.py  test_core.py  test_models.py  test_modules_authorization.py  test_modules_intent.py  test_modules_price.py  test_modules_seller.py  test_modules_terms.py  test_policy.py
